# fastapi_restframework

./: README.md  pyproject.toml
styler_utils/api/: constants.py  decorators.py  helpers.py  metaclasses.py  resolvers.py  routers.py  schemas.py  viewsets.py
styler_utils/api/contrib/sqlalchemy/: mixins.py  viewsets.py
