[tool.poetry]
name = "styler-utils"
version = "0.1.0"
description = ""
authors = ["Illia Kravets <illia.kravets@mint.ai>"]
readme = "README.md"
packages = [{include = "styler_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
